adding fovicon and changing images adresses

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exam Bhromaon</title>
+    <link rel="icon" href="images/favicon.png">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
@@ -59,10 +60,8 @@
             </div>
             <div class="choose-gallery">
                 <div class="choose-gallery__img">
-                    <div class="choose-gallery__img-bung"><img src="/First-Examination/images/Image01.jpg"
-                            alt="bungalow"></div>
-                    <div class="choose-gallery__img-mount"><img src="/First-Examination/images/Image02.jpg"
-                            alt="mountains"></div>
+                    <div class="choose-gallery__img-bung"><img src="images/Image01.jpg" alt="bungalow"></div>
+                    <div class="choose-gallery__img-mount"><img src="images/Image02.jpg" alt="mountains"></div>
                 </div>
             </div>
         </div>
@@ -71,19 +70,19 @@
         <div class="container container__action">
             <div class="action__box">
                 <svg class="action__search-icon">
-                    <use xlink:href="/First-Examination/sprite.svg/search.svg#search"></use>
+                    <use xlink:href="sprite.svg/search.svg#search"></use>
                 </svg>
                 <div class="title">Search Places</div>
             </div>
             <div class="action__box">
                 <svg class="action__select-icon">
-                    <use xlink:href="/First-Examination/sprite.svg/check.svg#check"></use>
+                    <use xlink:href="sprite.svg/check.svg#check"></use>
                 </svg>
                 <div class="title">Select Places</div>
             </div>
             <div class="action__box">
                 <svg class="action__book-icon">
-                    <use xlink:href="/First-Examination/sprite.svg/nice.svg#nice"></use>
+                    <use xlink:href="sprite.svg/nice.svg#nice"></use>
                 </svg>
                 <div class="title">Book & Enjoy</div>
             </div>
@@ -124,13 +123,13 @@
             <div class="title">What Our Tourist Say</div>
             <div class="our-tourists__box">
                 <div class="our-tourists__box-img">
-                    <img src="/First-Examination/images/image03.jpg" alt="tourist">
+                    <img src="images/image03.jpg" alt="tourist">
                 </div>
                 <div class="our-tourists__box-content">
                     <div class="our-tourists__box-name">Sam Sumon</div>
                     <div class="our-tourists__box-impression">
                         <svg class="quote">
-                            <use xlink:href="/First-Examination/sprite.svg/quote-left-solid.svg#quote"></use>
+                            <use xlink:href="sprite.svg/quote-left-solid.svg#quote"></use>
                         </svg>
                         <span>But</span> I must explain to you how all this mistaken idea of account to
                         denouncinpleasure and
@@ -149,19 +148,19 @@
             <div class="footer__credo">Safe Travel Anywhere</div>
             <div class="footer__social">
                 <svg class="facebook">
-                    <use xlink:href="/First-Examination/sprite.svg/facebook.svg#facebook"></use>
+                    <use xlink:href="sprite.svg/facebook.svg#facebook"></use>
                 </svg>
                 <svg class="twitter">
-                    <use xlink:href="/First-Examination/sprite.svg/twitter.svg#twitter"></use>
+                    <use xlink:href="sprite.svg/twitter.svg#twitter"></use>
                 </svg>
                 <svg class="linkedin">
-                    <use xlink:href="/First-Examination/sprite.svg/linkedin-in.svg#linkedin"></use>
+                    <use xlink:href="sprite.svg/linkedin-in.svg#linkedin"></use>
                 </svg>
                 <svg class="youtube">
-                    <use xlink:href="/First-Examination/sprite.svg/youtube.svg#youtube"></use>
+                    <use xlink:href="sprite.svg/youtube.svg#youtube"></use>
                 </svg>
                 <svg class="pinterest">
-                    <use xlink:href="/First-Examination/sprite.svg/pinterest.svg#pinterest"></use>
+                    <use xlink:href="sprite.svg/pinterest.svg#pinterest"></use>
                 </svg>
             </div>
         </div>
